<resources>
    <string name="app_name">Attendance</string>
    <string name="Login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="need_help">Need Help?</string>
    <string name="toast_login_successful">Login Successful</string>
    <string name="pick_date">Pick Date</string>
    <string name="subject">Subject</string>
    <string name="college_gct">GCT</string>
    <string name="college_git">GIT</string>
    <string name="gtcjaipur_com">\@gtcjaipur.com</string>
    <string name="update_attendance_title">Update</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="lecture_details">Lecture Details</string>
    <string name="take_attendance_title">New</string>
    <string name="out_of">out of</string>
    <string name="attendance_done">Attendance Done</string>
    <string name="not_logged_in">Not Logged In</string>
    <string name="attendance_list_is_empty">Attendance list is Empty!</string>
    <string name="click_button_below_to_add_new_attendance">Click button below to add new Attendance…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="lectures_not_scheduled">Lectures not scheduled!</string>
    <string name="new_name">New name</string>
    <string name="date">Date</string>
    <string name="lecture">Lecture</string>
    <string name="section">Section</string>
    <string name="branch">Branch</string>
    <string name="semester">Semester</string>
    <string name="dd_mm_yyyy">dd-mm-yyyy</string>

    <string name="network_not_available">Internet connection not available!</string>
    <string name="no_internet_icon">No Internet Icon</string>
    <string name="no_reports_icon">No reports icon.</string>
    <string name="no_reports_found">No reports found.</string>
    <string name="reports_will_be_generated_after_adding_lectures_and_students">
        Take atleast one attendance to generate report…</string>
    <string name="no_students_for_attendance_icon">No students for attendance icon</string>
    <string name="no_students_in_the_class">No students in the class.</string>
    <string name="add_the_students_to_respective_class_to_take_attendance">
        Add the students to respective class to take attendance…</string>
    <string name="save">save</string>
    <string name="verify_your_password_to_delete_this_attendance">Verify your password to delete this attendance…</string>
    <string name="verify_amp_delete"><![CDATA[Verify & DELETE]]></string>
</resources>
