<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/new_attendance_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAttendanceActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:titleTextColor="@android:color/white" />

    <!-- Date  -->
    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/date" />

        <!-- input field -->
        <EditText
            android:id="@+id/edit_date"
            style="@style/EditorFieldStyle"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/dd_mm_yyyy"
            android:inputType="date" />
    </LinearLayout>

    <LinearLayout style="@style/SpinnerLayoutContainer">

        <TextView
            style="@style/SpinnerTextStyle"
            android:text="@string/semester" />

        <Spinner
            android:id="@+id/semester_spinner"
            style="@style/SpinnerStyle" />
    </LinearLayout>

    <LinearLayout style="@style/SpinnerLayoutContainer">

        <TextView
            style="@style/SpinnerTextStyle"
            android:text="@string/branch" />

        <Spinner
            android:id="@+id/branch_spinner"
            style="@style/SpinnerStyle" />
    </LinearLayout>

    <LinearLayout style="@style/SpinnerLayoutContainer">

        <TextView
            style="@style/SpinnerTextStyle"
            android:text="@string/section" />

        <Spinner
            android:id="@+id/section_spinner"
            style="@style/SpinnerStyle" />
    </LinearLayout>

    <LinearLayout style="@style/SpinnerLayoutContainer">

        <TextView
            style="@style/SpinnerTextStyle"
            android:text="@string/lecture" />

        <Spinner
            android:id="@+id/lecture_spinner"
            style="@style/SpinnerStyle" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_new_attendance"
        style="@style/fab_right"
        app:srcCompat="@drawable/ic_baseline_done_24px" />

</LinearLayout>